log/build_2023-08-02_09-41-31/my_station_pkg/stderr.log
  File "/home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg/serialrecv.py", line 21
    self.get_logger()S.info('Serial node started')
                     ^
SyntaxError: invalid syntax

